fix minor spacing issues

--- a/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
+++ b/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
@@ -2,6 +2,11 @@
   background: var(--theme-color);
   @include color-block-change-vertical-spacing();
 
+
+  &:first-child {
+    padding-top: 0;
+  }
+
   & > p,
   & > span,
   & > li,
